[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://mainBG.png" type="Texture" id=2]
[ext_resource path="res://BoldenaBoldPersonalUse.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 102
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 3 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="Main" type="Node2D" parent="."]

[node name="MainBg" type="Sprite" parent="Main"]
texture = ExtResource( 2 )
centered = false

[node name="Main" type="Button" parent="Main"]
margin_left = 47.0
margin_top = 1868.0
margin_right = 1046.0
margin_bottom = 2295.0
custom_colors/font_color_disabled = Color( 0, 0.388235, 0.12549, 1 )
custom_colors/font_color_focus = Color( 0, 0.388235, 0.12549, 1 )
custom_colors/font_color = Color( 0, 0.388235, 0.12549, 1 )
custom_colors/font_color_hover = Color( 0, 0.388235, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0, 0.619608, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "BREAK AND ENTER"
flat = true

[node name="Submit" type="Button" parent="Main"]
margin_left = 1125.0
margin_top = 2097.0
margin_right = 2124.0
margin_bottom = 2295.0
custom_colors/font_color_disabled = Color( 0, 0.388235, 0.12549, 1 )
custom_colors/font_color_focus = Color( 0, 0.388235, 0.12549, 1 )
custom_colors/font_color = Color( 0, 0.388235, 0.12549, 1 )
custom_colors/font_color_hover = Color( 0, 0.388235, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0, 0.619608, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "SUBMIT"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Data2" type="Node2D" parent="Main"]

[node name="Title" type="LineEdit" parent="Main/Data2"]
margin_left = 1177.0
margin_top = 104.0
margin_right = 2087.0
margin_bottom = 232.0
custom_colors/font_color = Color( 0, 0.670588, 0.215686, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
placeholder_text = "Location Title"
placeholder_alpha = 0.228
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Coordinates" type="LineEdit" parent="Main/Data2"]
margin_left = 1177.0
margin_top = 304.0
margin_right = 2087.0
margin_bottom = 432.0
custom_colors/font_color = Color( 0, 0.670588, 0.215686, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
placeholder_text = "Coordinates"
placeholder_alpha = 0.228
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ORL" type="LineEdit" parent="Main/Data2"]
margin_left = 1177.0
margin_top = 504.0
margin_right = 2087.0
margin_bottom = 632.0
custom_colors/font_color = Color( 0, 0.670588, 0.215686, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
placeholder_text = "Operational Risk Level"
placeholder_alpha = 0.228
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Main/Data2/ORL"]
margin_left = 5.0
margin_top = 141.0
margin_right = 902.0
margin_bottom = 194.0
custom_colors/font_color = Color( 0, 1, 0.321569, 1 )
custom_fonts/font = SubResource( 10 )
text = "VL, L, M, H, VH"
align = 1

[node name="SP" type="LineEdit" parent="Main/Data2"]
margin_left = 1177.0
margin_top = 704.0
margin_right = 2087.0
margin_bottom = 832.0
custom_colors/font_color = Color( 0, 0.670588, 0.215686, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
placeholder_text = "Security Presence"
placeholder_alpha = 0.228
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Main/Data2/SP"]
margin_left = 5.0
margin_top = 141.0
margin_right = 902.0
margin_bottom = 194.0
custom_colors/font_color = Color( 0, 1, 0.321569, 1 )
custom_fonts/font = SubResource( 10 )
text = "N, VL, L, M, H, VH"
align = 1

[node name="EoA" type="LineEdit" parent="Main/Data2"]
margin_left = 1177.0
margin_top = 904.0
margin_right = 2087.0
margin_bottom = 1032.0
custom_colors/font_color = Color( 0, 0.670588, 0.215686, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
placeholder_text = "Ease of Access (Multiple)"
placeholder_alpha = 0.228
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Main/Data2/EoA"]
margin_left = 5.0
margin_top = 141.0
margin_right = 902.0
margin_bottom = 194.0
custom_colors/font_color = Color( 0, 1, 0.321569, 1 )
custom_fonts/font = SubResource( 10 )
text = "A, H, U"
align = 1

[node name="AER" type="LineEdit" parent="Main/Data2"]
margin_left = 1177.0
margin_top = 1104.0
margin_right = 2087.0
margin_bottom = 1232.0
custom_colors/font_color = Color( 0, 0.670588, 0.215686, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
placeholder_text = "Additional Equipment (Multiple)"
placeholder_alpha = 0.228
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Main/Data2/AER"]
margin_left = 5.0
margin_top = 141.0
margin_right = 902.0
margin_bottom = 194.0
custom_colors/font_color = Color( 0, 1, 0.321569, 1 )
custom_fonts/font = SubResource( 10 )
text = "R, H, M"
align = 1

[node name="Notes" type="LineEdit" parent="Main/Data2"]
margin_left = 1177.0
margin_top = 1304.0
margin_right = 2087.0
margin_bottom = 1432.0
custom_colors/font_color = Color( 0, 0.670588, 0.215686, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
placeholder_text = "Additional Notes"
placeholder_alpha = 0.228
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Main/Main" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Main/Submit" to="." method="_on_Submit_pressed"]
